log/regex.1.12.2.log
[regex] download directory: /var/tmp/top100_artifacts/regex-1.12.2
+ curl -sL https://crates.io/api/v1/crates/regex/1.12.2/download
+ tar xzf -
+ cd /var/tmp/top100_artifacts/regex-1.12.2
+ cargo clean
     Removed 0 files
+ cargo +stable test ''
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.101
   Compiling quote v1.0.41
   Compiling unicode-ident v1.0.19
   Compiling serde_core v1.0.228
   Compiling libc v0.2.177
   Compiling serde v1.0.228
   Compiling memchr v2.7.6
   Compiling syn v2.0.106
   Compiling hashbrown v0.16.0
   Compiling cfg-if v1.0.3
   Compiling equivalent v1.0.2
   Compiling getrandom v0.2.16
   Compiling anyhow v1.0.100
   Compiling indexmap v2.11.4
   Compiling winnow v0.7.13
   Compiling rand_core v0.6.4
   Compiling aho-corasick v1.1.3
   Compiling regex-syntax v0.8.8
   Compiling serde_derive v1.0.228
   Compiling doc-comment v0.3.3
   Compiling rand v0.8.5
   Compiling regex-automata v0.4.13
   Compiling toml_datetime v0.6.11
   Compiling serde_spanned v0.6.9
   Compiling toml_edit v0.22.27
   Compiling toml v0.8.23
   Compiling bstr v1.12.0
   Compiling atty v0.2.14
   Compiling termcolor v1.4.1
   Compiling log v0.4.28
   Compiling humantime v2.3.0
   Compiling regex-test v0.1.1
   Compiling env_logger v0.9.3
   Compiling quickcheck v1.0.3
   Compiling regex v1.12.2 (/var/tmp/top100_artifacts/regex-1.12.2)
error[E0583]: file not found for module `fuzz`
 --> tests/lib.rs:3:1
  |
3 | mod fuzz;
  | ^^^^^^^^^
  |
  = help: to create the module `fuzz`, create file "tests/fuzz.rs" or "tests/fuzz/mod.rs"
  = note: if there is a `mod fuzz` elsewhere in the crate already, import it with `use crate::...` instead

For more information about this error, try `rustc --explain E0583`.
error: could not compile `regex` (test "integration") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
+ RESULT=101
+ cd /var/tmp/top100_artifacts
+ rm -rf /var/tmp/top100_artifacts/regex-1.12.2
+ exit 101
